--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build"
+    "start": "react-scripts start",
+    "build": "react-scrips build"
   },
   "eslintConfig": {
     "extends": [
